fix(gestern) adjust first viewport visible elements

--- a/src/wp-content/themes/grossartig/scss/category-gestern.scss
+++ b/src/wp-content/themes/grossartig/scss/category-gestern.scss
@@ -15,8 +15,9 @@
     }
 
     padding: grid-margin();
-    margin-bottom: grid-width(3);
     border-top: 2px solid $background;
+
+    min-height: 100vh;
 
     .archive, .category {
       border-top: 2px solid $background;
@@ -47,6 +48,8 @@
       font-size: 25px;
       line-height: 30px;
       padding: grid-gap(5) 0;
+
+      min-height: 40vh;
 
       color: $primary-color-inverted;
     }
@@ -155,6 +158,10 @@
   &__post {
     position: relative;
     padding: grid-gap(4) 0;
+
+    &:first-child {
+      padding-top: 0;
+    }
 
     @include screen-size-m {
       display: inherit;
@@ -359,6 +366,10 @@
   &__post {
     position: relative;
     padding: grid-gap(4) 0;
+
+    &:first-child {
+      padding-top: 0;
+    }
 
     display: flex;
     flex-direction: column;
